# iopsdata

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
backend/: .env.example  Dockerfile  Procfile  README.md  pyproject.toml  pytest.ini  railway.json  render.yaml
backend/src/iopsdata/: __init__.py  config.py  main.py
backend/src/iopsdata/api/: dependencies.py  main.py  routes.py  schemas.py
backend/src/iopsdata/api/routes/: auth.py  chat.py  connections.py  execute.py  files.py  lineage.py  providers.py  settings.py
backend/src/iopsdata/connections/: __init__.py  base.py  manager.py  schema_extractor.py
backend/src/iopsdata/connections/providers/: __init__.py  duckdb.py  mysql.py  postgres.py  sqlite.py  supabase_db.py
backend/src/iopsdata/core/: config.py
backend/src/iopsdata/db/: __init__.py  models.py  schema.sql  supabase.py
backend/src/iopsdata/files/: __init__.py  loader.py  models.py  profiler.py  upload.py
backend/src/iopsdata/lineage/: __init__.py  graph.py  models.py  parser.py  tracker.py
backend/src/iopsdata/llm/: __init__.py  base.py  router.py
backend/src/iopsdata/llm/context/: __init__.py  prompt_templates.py  schema_builder.py  sql_extractor.py
backend/src/iopsdata/llm/providers/: __init__.py  anthropic.py  gemini.py  groq.py  ollama.py  openai.py  openrouter.py
backend/src/iopsdata/utils/: encryption.py  rate_limit.py  validation.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_connections.py  test_lineage.py  test_llm_router.py  test_profiler.py  test_utils.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  INSTALLATION.md  README.md  ROADMAP.md  SECURITY.md
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
(+78 files in other folders)
